--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
 		<section class="block-section">
 			<div class="page">
 				
-	
+
+
+				<h1>Install</h1>
+				<p>
+					Three ways to get a copy of Navvi:<br>
+					- <a href="https://github.com/platdesign/navvi/archive/master.zip">Download as Zip</a><br>
+					- Clone from GitHub: <code class="language-markup">git clone git@github.com:platdesign/navvi.git</code><br>
+					- Bower: <code class="language-markup">bower install navvi --save</code>
+				</p>
+
+				<br><br>
 
 				<h1>How to use</h1>
 
@@ -114,7 +124,6 @@
 
 				</div>
 
-			
 
 				
 
