--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 				<p>
 					Three ways to get a copy of Navvi:<br>
 					- <a href="https://github.com/platdesign/navvi/archive/master.zip">Download as Zip</a><br>
-					- Clone from GitHub: <code class="language-markup">git clone git@github.com:platdesign/navvi.git</code><br>
-					- Bower: <code class="language-markup">bower install navvi --save</code>
+					- Clone from GitHub: <i>git clone git@github.com:platdesign/navvi.git</i><br>
+					- Bower: <i>bower install navvi --save</i>
 				</p>
 
 				<br><br>
